lab2_1/.metadata/.plugins/org.eclipse.cdt.ui/nxp_lpcxpresso_11u14_periph_blinky.build.log
14:09:31 **** Incremental Build of configuration Debug for project nxp_lpcxpresso_11u14_periph_blinky ****
make -r all 
Building file: ../example/src/blinky.c
Invoking: MCU C Compiler
arm-none-eabi-gcc -D__REDLIB__ -DDEBUG -D__CODE_RED -D__USE_LPCOPEN -DCORE_M0 -I"/Users/Rane/LPCXpresso/lab2_1/nxp_lpcxpresso_11u14_periph_blinky/example/inc" -I"/Users/Rane/LPCXpresso/lab2_1/lpc_chip_11uxx_lib/inc" -I"/Users/Rane/LPCXpresso/lab2_1/nxp_lpcxpresso_11u14_board_lib/inc" -O0 -g3 -Wall -c -fmessage-length=0 -fno-builtin -ffunction-sections -fdata-sections -mcpu=cortex-m0 -mthumb -D__REDLIB__ -specs=redlib.specs -MMD -MP -MF"example/src/blinky.d" -MT"example/src/blinky.o" -MT"example/src/blinky.d" -o "example/src/blinky.o" "../example/src/blinky.c"
../example/src/blinky.c: In function 'main':
../example/src/blinky.c:95:2: error: 'f' undeclared (first use in this function)
  f = fibonacci(10);
  ^
../example/src/blinky.c:95:2: note: each undeclared identifier is reported only once for each function it appears in
make: *** [example/src/blinky.o] Error 1

14:09:31 Build Finished (took 137ms)

